# raagdosa

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RaagDosa-Commands.md  config.yaml  paths.local.example.yaml  paths.local.yaml.example  pyproject.toml  raagdosa.py  raagdosa_scanner.py  raagdosa_tags.py
.github/workflows/: publish.yml
guide/: GUIDE.md
raagdosa/: __init__.py  __main__.py  artists.py  cli.py  commands.py  config.py  core.py  crates.py  files.py  interactive.py  library.py  moves.py  naming.py  orchestration.py  pipeline.py  proposal.py  review.py  scanning.py  scoring.py  session.py  tagreader.py  tags.py  tags_cmd.py  tracks.py  ui.py
